--- a/RD3/App.xaml
+++ b/RD3/App.xaml
@@ -25,6 +25,7 @@
                 <ResourceDictionary Source="Themes/Geometry.xaml" />
                 <ResourceDictionary Source="Themes/Colors.xaml" />
                 <ResourceDictionary Source="Themes/Brushes.xaml" />
+                <ResourceDictionary Source="Themes/ProgressRing.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <ResourceDictionary x:Key="zh_CN" Source="pack://application:,,,/Lang/Lang.zh-CN.xaml" />
             <ResourceDictionary x:Key="en_US" Source="pack://application:,,,/Lang/Lang.en-US.xaml" />
@@ -51,8 +52,7 @@
             </Style>
             <Style x:Key="BorderForm" TargetType="{x:Type Border}">
                 <Setter Property="Background" Value="{StaticResource BackGroundBrush}" />
-                <Setter Property="Border.CornerRadius" Value="8" />
-                <Setter Property="Border.Padding" Value="20" />
+                <Setter Property="Border.CornerRadius" Value="4" />
                 <Setter Property="Background" Value="{DynamicResource DefaultBrush}" />
                 <Setter Property="BorderThickness" Value="0" />
                 <Setter Property="BorderBrush" Value="{DynamicResource BackGroundBrush}" />
